# bd-training-10Feb2026

./: README.md
Agents/Compliance Agent/: Agent Prompts.md  QA prompts.md
Agents/Industry Insight & Origination Agent/: prompts.md
Deep Research/: prompt.md
High Code Agent (proceed with caution)/: README.md  pyproject.toml
High Code Agent (proceed with caution)/wesfarmers_slide_reviewer/: __init__.py  agent.py  cli.py  demo_content.py  google_clients.py  review_workflow.py  tools.py  wesfarmers_style_guide.md
Idea Generation/: prompt.md
Valuation QA/: [Internal] Petbarn Valuation v0 11Feb2026.xlsx  prompts.md
Wesfarmers BD - Virtual Data Room/: 01_Share_Purchase_Agreement_DRAFT.docx  02_Management_Presentation_Briefing_Pack.docx  03_Synergy_Assessment_Working_Paper.docx  04_Key_Employee_Retention_Framework.docx  05_VDR_Index_Document_Register.docx  06_Due_Diligence_QA_Log.docx  07_Integration_Planning_Framework.docx  08_Board_Paper_Acquisition_Approval.docx  09_Regulatory_Conditions_Tracker.docx  10_Process_Letter_NDA.docx
Wesfarmers BD - Virtual Data Room/Prompts/: prompts.md
